--- a/lerero.verification.html
+++ b/lerero.verification.html
@@ -377,66 +377,66 @@ td .es-button-border-2:hover {
          </tr>
        </table>
        <table cellpadding="0" cellspacing="0" class="es-content" align="center" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%">
-         <tr>
-          <td align="center" style="padding:0;Margin:0">
-           <table bgcolor="#ffffff" class="es-content-body" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:#FFFFFF;width:600px">
-             <tr>
-              <td class="esdev-adapt-off" align="left" bgcolor="#066bfb" style="Margin:0;padding-top:20px;padding-left:20px;padding-right:20px;padding-bottom:30px;background-color:#066bfb">
-               <table cellpadding="0" cellspacing="0" class="esdev-mso-table" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;width:560px">
-                 <tr>
-                  <td class="esdev-mso-td" valign="top" style="padding:0;Margin:0">
-                   <table cellpadding="0" cellspacing="0" class="es-left" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
-                     <tr>
-                      <td class="es-m-p0r" align="center" style="padding:0;Margin:0;width:216px">
-                       <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                         <tr>
-                          <td align="right" style="padding:0;Margin:0;font-size:0px"><img src="https://vlovyt.stripocdn.email/content/guids/CABINET_8fe32ff2634b2ed265b0c7b187bd20618ba8548128fe9a4cf1fcb5359f130f3d/images/sosmedlinkedin.png" alt style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="39"></td>
-                         </tr>
-                       </table></td>
-                     </tr>
-                   </table></td>
-                  <td style="padding:0;Margin:0;width:15px"></td>
-                  <td class="esdev-mso-td" valign="top" style="padding:0;Margin:0">
-                   <table cellpadding="0" cellspacing="0" class="es-left" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
-                     <tr>
-                      <td align="center" style="padding:0;Margin:0;width:41px">
-                       <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                         <tr>
-                          <td align="center" style="padding:0;Margin:0;font-size:0px"><img src="https://vlovyt.stripocdn.email/content/guids/CABINET_8fe32ff2634b2ed265b0c7b187bd20618ba8548128fe9a4cf1fcb5359f130f3d/images/sosmedyoutube.png" alt style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="37"></td>
-                         </tr>
-                       </table></td>
-                     </tr>
-                   </table></td>
-                  <td style="padding:0;Margin:0;width:15px"></td>
-                  <td class="esdev-mso-td" valign="top" style="padding:0;Margin:0">
-                   <table cellpadding="0" cellspacing="0" class="es-left" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
-                     <tr>
-                      <td align="center" style="padding:0;Margin:0;width:37px">
-                       <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                         <tr>
-                          <td align="left" style="padding:0;Margin:0;font-size:0px"><img src="https://vlovyt.stripocdn.email/content/guids/CABINET_8fe32ff2634b2ed265b0c7b187bd20618ba8548128fe9a4cf1fcb5359f130f3d/images/sosmedig.png" alt style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="37"></td>
-                         </tr>
-                       </table></td>
-                     </tr>
-                   </table></td>
-                  <td style="padding:0;Margin:0;width:15px"></td>
-                  <td class="esdev-mso-td" valign="top" style="padding:0;Margin:0">
-                   <table cellpadding="0" cellspacing="0" class="es-right" align="right" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right">
-                     <tr>
-                      <td align="center" style="padding:0;Margin:0;width:221px">
-                       <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                         <tr>
-                          <td align="left" style="padding:0;Margin:0;font-size:0px"><img src="https://vlovyt.stripocdn.email/content/guids/CABINET_8fe32ff2634b2ed265b0c7b187bd20618ba8548128fe9a4cf1fcb5359f130f3d/images/sosmedfacebook.png" alt style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="37"></td>
-                         </tr>
-                       </table></td>
-                     </tr>
-                   </table></td>
-                 </tr>
-               </table></td>
-             </tr>
-           </table></td>
-         </tr>
-       </table></td>
+        <tr>
+         <td align="center" style="padding:0;Margin:0">
+          <table bgcolor="#ffffff" class="es-content-body" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:#FFFFFF;width:600px">
+            <tr>
+             <td class="esdev-adapt-off" align="left" bgcolor="#066bfb" style="Margin:0;padding-top:20px;padding-left:20px;padding-right:20px;padding-bottom:30px;background-color:#066bfb">
+              <table cellpadding="0" cellspacing="0" class="esdev-mso-table" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;width:560px">
+                <tr>
+                 <td class="esdev-mso-td" valign="top" style="padding:0;Margin:0">
+                  <table cellpadding="0" cellspacing="0" class="es-left" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
+                    <tr>
+                     <td class="es-m-p0r" align="center" style="padding:0;Margin:0;width:216px">
+                      <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
+                        <tr>
+                         <td align="right" style="padding:0;Margin:0;font-size:0px"><a href="https://linkedin.com" target="_blank" style="width:max-content;display:block;"><img src="https://vlovyt.stripocdn.email/content/guids/CABINET_86322bfee65ddd50f1132ed10d323634b2c747fb14c5faba4df58d5ed989d08b/images/sosmedlinkedin.png" alt style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="39"></a></td>
+                        </tr>
+                      </table></td>
+                    </tr>
+                  </table></td>
+                 <td style="padding:0;Margin:0;width:15px"></td>
+                 <td class="esdev-mso-td" valign="top" style="padding:0;Margin:0">
+                  <table cellpadding="0" cellspacing="0" class="es-left" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
+                    <tr>
+                     <td align="center" style="padding:0;Margin:0;width:41px">
+                      <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
+                        <tr>
+                         <td align="center" style="padding:0;Margin:0;font-size:0px"><a href="https://youtube.com" target="_blank" style="width:max-content;display:block;"><img src="https://vlovyt.stripocdn.email/content/guids/CABINET_86322bfee65ddd50f1132ed10d323634b2c747fb14c5faba4df58d5ed989d08b/images/sosmedyoutube.png" alt style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="37"></a></td>
+                        </tr>
+                      </table></td>
+                    </tr>
+                  </table></td>
+                 <td style="padding:0;Margin:0;width:15px"></td>
+                 <td class="esdev-mso-td" valign="top" style="padding:0;Margin:0">
+                  <table cellpadding="0" cellspacing="0" class="es-left" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
+                    <tr>
+                     <td align="center" style="padding:0;Margin:0;width:37px">
+                      <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
+                        <tr>
+                         <td align="left" style="padding:0;Margin:0;font-size:0px"><a href="https://instagram.com" target="_blank" style="width:max-content;display:block;"><img src="https://vlovyt.stripocdn.email/content/guids/CABINET_86322bfee65ddd50f1132ed10d323634b2c747fb14c5faba4df58d5ed989d08b/images/sosmedig.png" alt style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="37"></a></td>
+                        </tr>
+                      </table></td>
+                    </tr>
+                  </table></td>
+                 <td style="padding:0;Margin:0;width:15px"></td>
+                 <td class="esdev-mso-td" valign="top" style="padding:0;Margin:0">
+                  <table cellpadding="0" cellspacing="0" class="es-right" align="right" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right">
+                    <tr>
+                     <td align="center" style="padding:0;Margin:0;width:221px">
+                      <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
+                        <tr>
+                         <td align="left" style="padding:0;Margin:0;font-size:0px"><a href="https://facebook.com" target="_blank" style="width:max-content;display:block;"><img src="https://vlovyt.stripocdn.email/content/guids/CABINET_86322bfee65ddd50f1132ed10d323634b2c747fb14c5faba4df58d5ed989d08b/images/sosmedfacebook.png" alt style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="37"></a></td>
+                        </tr>
+                      </table></td>
+                    </tr>
+                  </table></td>
+                </tr>
+              </table></td>
+            </tr>
+          </table></td>
+        </tr>
+      </table></td>
      </tr>
    </table>
   </div>
